--- a/style.css
+++ b/style.css
@@ -28,3 +28,208 @@
     background-color: #f1f1f1; /* Colore della traccia della barra di scorrimento */
 }
 
+#titolo {
+    height: 100%;
+    width: 100%;
+  }
+  #content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2em;
+  }
+
+  .movie-image {
+    margin-top: 20px;
+    display: none;
+    height: 250px;
+    width: 200px;
+  }
+
+  .movie-image.visible {
+    display: block;
+  }
+
+  .circle-container {
+    display: fixed;
+    flex-direction: column;
+    margin-top: -10px;
+  }
+
+  .circle {
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background-color: #aaa;
+    margin: 3px 0;
+  }
+
+  .circle.active {
+    background-color: #ffcc00;
+    /* Puedes ajustar el color según tus preferencias */
+  }
+
+  footer {
+    background-color: #aaa;
+    color: #fff;
+    text-align: center;
+    padding: 1em 0;
+  }
+
+  .movie-image {
+    margin-left: 500px;
+    display: inline-block;
+  }
+
+  .movie-image {
+    margin-left: 500px;
+    display: inline-block;
+  }
+
+  /*CSS POLAROID FINE*/
+
+  #scrolly {
+    position: relative;
+    background-color: #ffffff;
+  }
+
+  article {
+    position: relative;
+    padding: 0;
+    max-width: 35rem;
+    margin: 0 auto;
+  }
+
+  .sticky-thing {
+    position: -webkit-sticky;
+    position: sticky;
+    left: 0;
+    width: 100%;
+    margin: 0;
+    background-color: #ffffff;
+    z-index: 0;
+    top: 12.5vh;
+    height: 75vh;
+    /* Center everything inside */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .sticky-thing p {
+    opacity: 0;
+  }
+
+  .orange-lines {
+    width: 100%;
+    /* Imposta la larghezza del contenitore delle linee sulla larghezza del div sticky-thing */
+    height: 100%;
+    /* Imposta l'altezza del contenitore delle linee sull'altezza del div sticky-thing */
+  }
+
+  .orange-line {
+    stroke: rgb(255, 111, 0);
+    stroke-width: 2;
+  }
+
+  .step {
+    margin: 0 auto 13rem auto;
+    color: #fff;
+    background-color: rgb(184, 104, 104, 0);
+  }
+
+  .step:last-child {
+    margin-bottom: 0;
+  }
+
+  .step.is-active p {
+    background-color: rgb(255, 255, 255, 0.7);
+    color: #000000;
+    font-family: "futura-pt", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+  }
+
+  .step p {
+    text-align: center;
+    padding: 0rem;
+    font-size: 1.5rem;
+    background-color: rgb(255, 255, 255, 0.7);
+    color: #000000;
+    font-family: "futura-pt", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+  }
+  .section {
+    height: 500px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    position: relative;
+  }
+
+  .image-container{
+    width: 100%;
+  }
+
+  .img-container{
+    width: 100%;
+    height: 100%;
+    max-width: 300px;
+    position: relative;
+
+    .img{
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
+  }
+
+
+  .box-container {
+    position: fixed;
+    top: 100px;
+    z-index: 1;
+    padding: 1em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    right: 100px;
+    opacity: 0;
+    transition: 1s;
+    .left-column {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+      }
+      .right-column {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+      }
+      .box {
+        width: 25px;
+        height: 25px;
+        border-radius: 50%;
+        border: 1px solid rgb(210, 79, 44);
+      }
+      .box.active {
+        background-color: rgb(210, 79, 44);
+      }
+    }
+
+  .is-active{
+    animation: 1s appear forwards;
+  }
+
+
+  @keyframes appear {
+    from{
+      opacity: 0;
+    }
+    to{
+      opacity: 1;
+    }
+  }
