--- a/style.css
+++ b/style.css
@@ -32,6 +32,15 @@
     height: 100%;
     width: 100%;
   }
+
+  #schema {
+    width: 900px;
+    height: 650px;
+    display: block;
+ margin-left: auto;
+ margin-right: auto;
+  }
+
   #content {
     display: flex;
     justify-content: space-between;
@@ -141,6 +150,7 @@
     background-color: rgb(184, 104, 104, 0);
   }
 
+  
   .step:last-child {
     margin-bottom: 0;
   }
@@ -148,8 +158,8 @@
   .step.is-active p {
     background-color: rgb(255, 255, 255, 0.7);
     color: #000000;
-    font-family: "futura-pt", sans-serif;
-    font-weight: 300;
+    font-family: "stevie-sans", sans-serif;
+    font-weight: 700;
     font-style: normal;
   }
 
@@ -159,8 +169,8 @@
     font-size: 1.5rem;
     background-color: rgb(255, 255, 255, 0.7);
     color: #000000;
-    font-family: "futura-pt", sans-serif;
-    font-weight: 300;
+    font-family: "stevie-sans", sans-serif;                                        
+    font-weight: 700;
     font-style: normal;
   }
   .section {
