--- a/style.css
+++ b/style.css
@@ -28,53 +28,6 @@
     background-color: #f1f1f1; /* Colore della traccia della barra di scorrimento */
 }
 
-
-
-
-
-ul#menu {
-  margin-top: 10px;
-  padding: 0;
-  list-style: none;
-  position: fixed;
-  z-index: 1;
-  background-color: #5c3232;
-
-}
-
-ul#menu li {
-  background-color: #ffffff;
-  border-bottom: 5px solid #ffffff;
-  display: block;
-  width: 150px;
-  height: 30px;
-  margin: 2px;
-  position: relative;
-  float: left; /* elementi su singola riga */
-}
-
-ul#menu li a {
-  color: #000000;
-  font-family: "stevie-sans", sans-serif;                                        
-  font-weight: 700;
-  font-style: normal;
-  display: block;
-  line-height: 30px;
-  text-decoration: none;
-  width: 150px;
-  height: 30px;
-  text-align: center;
-}
-
-ul#menu li:hover {
-  font-size: 20px;
-  background-color: #ffffff;
-  border-bottom: 5px solid rgb(210, 79, 44);
-}
-
-
-
-
 #titolo {
     height: 100%;
     width: 100%;
@@ -106,6 +59,16 @@ ul#menu li:hover {
     display: block;
   }
 
+  .line-container {
+    position: fixed;
+    top: 150px;
+    left:0px;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    overflow: hidden;
+  }
+
   .circle-container {
     display: fixed;
     flex-direction: column;
@@ -129,7 +92,7 @@ ul#menu li:hover {
 
  right: 50px;
  bottom: 20%;
-    background-color: rgb(210, 79, 44);
+    background-color: rgb(210, 79, 44);;
     color: #fff;
     text-align: center;
     padding: 1em 0;
@@ -220,6 +183,7 @@ ul#menu li:hover {
     font-weight: 700;
     font-style: normal;
   }
+
   .section {
     height: 500px;
     display: flex;
@@ -262,6 +226,7 @@ ul#menu li:hover {
       object-fit: contain;
     }
     
+
   #cambioimmagine:hover .img1 {
        display: none;
   }
