--- a/style.css
+++ b/style.css
@@ -27,7 +27,15 @@
 ::-moz-scrollbar-track {
     background-color: #f1f1f1; /* Colore della traccia della barra di scorrimento */
 }
-
+.line-container {
+  position: fixed;
+  top: 150px;
+  left:0px;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  overflow: hidden;
+}
 ul#menu {
   margin: 0;
   padding: 0;
