--- a/style.css
+++ b/style.css
@@ -27,18 +27,6 @@
 ::-moz-scrollbar-track {
     background-color: #f1f1f1; /* Colore della traccia della barra di scorrimento */
 }
-
-nav{
-  position: fixed;
-  background-color: #ffffff;
-  width: 100%;
-  height: 70px;
-  z-index: 1;
-list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
 .line-container {
   position: fixed;
   top: 150px;
@@ -49,16 +37,22 @@ list-style-type: none;
   overflow: hidden;
 }
 
+nav{
+  position: fixed;
+  width: 100%;
+  height: 70px;
+  z-index: 1;
+  background-color: white;
+}
+
 ul#menu {
   position: fixed;
   z-index: 1;
-  padding: 10px;
   list-style: none;
   height: 30px;
 }
 ul#menu li {
-  background-color: #ffffff;
-  border-bottom: 5px solid #ffffff;
+  background-color: #ffffff ;
   display: block;
   width: 150px;
   float: left; /* elementi su singola riga */
@@ -76,7 +70,6 @@ ul#menu li a {
   text-align: center;
 }
 ul#menu li.active, ul#menu li:hover {
-  background-color: #ffffff;
   border-bottom: 5px solid rgb(210, 79, 44);
 }
 
@@ -173,7 +166,7 @@ ul#menu li.active, ul#menu li:hover {
     margin-top: 500px;
     position: relative;
     padding: 0;
-    max-width: 35rem;
+    max-width: 100%;
     margin: 0 auto;
   }
 
@@ -228,15 +221,74 @@ ul#menu li.active, ul#menu li:hover {
     font-style: normal;
   }
 
-  .step p {
+.rosso{
+  color: #c44848;
+
+}
+
+  .stepc  {
+    margin: 0 auto;
+
     text-align: center;
-    padding: 0rem;
-    font-size: 1.5rem;
+    padding: 20px;
+    font-size: 35px;
     background-color: rgb(255, 255, 255, 0.7);
     color: #000000;
     font-family: "stevie-sans", sans-serif;                                        
     font-weight: 700;
     font-style: normal;
+    max-width: 1000px;
+    align-items: center;
+  }
+
+
+  .step11 p {
+    text-align: left;
+    padding-left: 90px;
+    padding-top: 5px;
+    font-size: 35px;
+    background-color: rgb(255, 255, 255, 0.7);
+    color: #000000;
+    font-family: "stevie-sans", sans-serif;                                        
+    font-weight: 700;
+    font-style: normal;
+    max-width: 1000px;
+  }
+
+  .step12 p {
+    text-align: left;
+    padding: 90px;
+    font-size: 35px;
+    background-color: rgb(255, 255, 255, 0.7);
+    color: #000000;
+    font-family: "stevie-sans", sans-serif;                                        
+    font-weight: 700;
+    font-style: normal;
+    max-width: 570px;
+  }
+
+  .step13 p {
+    text-align: left;
+    padding: 90px;
+    font-size: 35px;
+    background-color: rgb(255, 255, 255, 0.7);
+    color: #000000;
+    font-family: "stevie-sans", sans-serif;                                        
+    font-weight: 700;
+    font-style: normal;
+    max-width: 1000px;
+  }
+
+  .step2 p {
+    text-align: right;
+    padding: 90px;
+    font-size: 35px;
+    background-color: rgb(255, 255, 255, 0.7);
+    color: #000000;
+    font-family: "stevie-sans", sans-serif;                                        
+    font-weight: 700;
+    font-style: normal;
+
   }
 
   .section {
