--- a/style.css
+++ b/style.css
@@ -37,6 +37,8 @@
   overflow: hidden;
 }
 
+
+
 nav{
   position: fixed;
   width: 100%;
@@ -52,6 +54,7 @@ ul#menu {
   height: 30px;
 }
 ul#menu li {
+  margin: 0 auto;
   background-color: #ffffff ;
   display: block;
   width: 150px;
@@ -86,6 +89,7 @@ ul#menu li.active, ul#menu li:hover {
     display: block;
  margin-left: auto;
  margin-right: auto;
+ 
   }
 
   #content {
@@ -136,7 +140,6 @@ ul#menu li.active, ul#menu li:hover {
   }
 
   footer {
-
  right: 50px;
  bottom: 20%;
     background-color: rgb(210, 79, 44);;
@@ -235,6 +238,21 @@ ul#menu li.active, ul#menu li:hover {
     background-color: rgb(255, 255, 255, 0.7);
     color: #000000;
     font-family: "stevie-sans", sans-serif;                                        
+    font-weight: 400;
+    font-style: normal;
+    max-width: 1000px;
+    align-items: center;
+  }
+
+  .stepcg  {
+    margin: 0 auto;
+
+    text-align: center;
+    padding: 20px;
+    font-size: 50px;
+    background-color: rgb(255, 255, 255, 0.7);
+    color: #000000;
+    font-family: "stevie-sans", sans-serif;                                        
     font-weight: 700;
     font-style: normal;
     max-width: 1000px;
@@ -249,10 +267,11 @@ ul#menu li.active, ul#menu li:hover {
     font-size: 35px;
     background-color: rgb(255, 255, 255, 0.7);
     color: #000000;
-    font-family: "stevie-sans", sans-serif;                                        
-    font-weight: 700;
-    font-style: normal;
+
     max-width: 1000px;
+    font-family: "museo-sans", sans-serif;
+font-weight: 300;
+font-style: normal;
   }
 
   .step12 p {
@@ -261,8 +280,8 @@ ul#menu li.active, ul#menu li:hover {
     font-size: 35px;
     background-color: rgb(255, 255, 255, 0.7);
     color: #000000;
-    font-family: "stevie-sans", sans-serif;                                        
-    font-weight: 700;
+    font-family: "museo-sans", sans-serif;
+    font-weight: 300;
     font-style: normal;
     max-width: 570px;
   }
@@ -273,8 +292,8 @@ ul#menu li.active, ul#menu li:hover {
     font-size: 35px;
     background-color: rgb(255, 255, 255, 0.7);
     color: #000000;
-    font-family: "stevie-sans", sans-serif;                                        
-    font-weight: 700;
+    font-family: "museo-sans", sans-serif;
+    font-weight: 300;
     font-style: normal;
     max-width: 1000px;
   }
@@ -285,8 +304,8 @@ ul#menu li.active, ul#menu li:hover {
     font-size: 35px;
     background-color: rgb(255, 255, 255, 0.7);
     color: #000000;
-    font-family: "stevie-sans", sans-serif;                                        
-    font-weight: 700;
+    font-family: "museo-sans", sans-serif;
+    font-weight: 300;
     font-style: normal;
 
   }
