--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ ul#menu li a {
   text-align: center;
 }
 ul#menu li.active, ul#menu li:hover {
-  border-bottom: 5px solid rgb(210, 79, 44);
+  border-bottom: 5px solid #d24f2c;
 }
 
 
@@ -83,13 +83,15 @@ ul#menu li.active, ul#menu li:hover {
     width: 100%;
   }
 
+
   #schema {
-    width: 900px;
-    height: 650px;
+    width: 1000px;
+    height: 400px;
+    z-index: 1;
     display: block;
  margin-left: auto;
  margin-right: auto;
- 
+ background-color: white;
   }
 
   #content {
