--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ nav{
   height: 70px;
   z-index: 1;
   background-color: white;
+  margin-top: -8px;
 }
 
 ul#menu {
@@ -148,6 +149,9 @@ ul#menu li.active, ul#menu li:hover {
     color: #fff;
     text-align: center;
     padding: 1em 0;
+    margin-bottom: -8px;
+    margin-left: -8px;
+    margin-right: -8px;
   }
 
   .movie-image {
