--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@
     background-color: #f1f1f1; /* Colore della traccia della barra di scorrimento */
 }
 .line-container {
+ z-index: -100000;
   position: fixed;
   top: 150px;
   left:0px;
