--- a/style.css
+++ b/style.css
@@ -40,7 +40,9 @@
   text-align: center;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   z-index: 1000;
-font-family: museo;
+font-family: "museo-sans-rounded", sans-serif;
+font-size: 20px;
+
 }
 .line-container {
   position: fixed;
