--- a/style.css
+++ b/style.css
@@ -29,19 +29,22 @@
 }
 
 #announcement-container {
-  display: none;
-  position: fixed;
+  display:none;
+  position:fixed;
   top: 0;
-  left: 0;
-  width: 100%;
+  left: 50%;
+  transform: translateX(-10%);
+  width: 80%; /* Adjust the width as needed */
+  max-width: 600px;
   background-color: #DB6C34;
   color: white;
-  padding: 10px;
+  padding: 8px;
   text-align: center;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   z-index: 1000;
 font-family: "museo-sans-rounded", sans-serif;
 font-size: 20px;
+font-weight: bold;
 
 }
 .line-container {
