correzione grandezze tatoo

--- a/style.css
+++ b/style.css
@@ -412,8 +412,8 @@ font-style: normal;
       display: none;
     }
     .imgt{
-      width: 150%;
-      height: 100%;
+      width: 105%;
+      height: auto;
       object-fit: contain;
     }
     
