--- a/style.css
+++ b/style.css
@@ -443,12 +443,12 @@ font-style: normal;
     .left-column {
         display: flex;
         flex-direction: column;
-        gap: 2px;
+        gap: 3px;
       }
       .right-column {
         display: flex;
         flex-direction: column;
-        gap: 2px;
+        gap: 3;
       }
       .box {
         width: 9.5px;
